// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate projenrc in java 1`] = `
"import io.github.cdklabs.projen.java.JavaProject;
import io.github.cdklabs.projen.java.JavaProjectOptions;

public class projenrc {
    public static void main(String[] args) {
        JavaProject project = new JavaProject();
        project.synth();
    }
}"
`;

exports[`projenrc.java support 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes linguist-generated
/.github/workflows/pull-request-lint.yml linguist-generated
/.github/workflows/stale.yml linguist-generated
/.gitignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/pom.xml linguist-generated",
  ".github/workflows/pull-request-lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    steps:
      - uses: amannn/action-semantic-pull-request@v3.4.6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v4
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-pr-message: Closing this pull request as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-pr-label: stale
          exempt-pr-labels: backlog
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-issue-message: Closing this issue as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-issue-label: stale
          exempt-issue-labels: backlog
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/.github/workflows/stale.yml
!/pom.xml
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "org.codehaus.mojo/exec-maven-plugin",
        "type": "build",
        "version": "3.0.0",
      },
      Object {
        "name": "io.github.cdklabs/projen",
        "type": "test",
        "version": "1.0.0",
      },
    ],
  },
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".github/workflows/pull-request-lint.yml",
      ".github/workflows/stale.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "pom.xml",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
        "steps": Array [
          Object {
            "exec": "mvn compiler:testCompile --quiet",
          },
          Object {
            "exec": "mvn exec:java --quiet -Dexec.mainClass=projenrc -Dexec.classpathScope=\\"test\\"",
          },
        ],
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  ".projen/tree.json": Object {
    "tree": Object {
      "children": Object {
        ".gitattributes": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitattributes",
          "path": "my-project/.gitattributes",
        },
        ".gitignore": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitignore",
          "path": "my-project/.gitignore",
        },
        ".projen--files.json": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".projen--files.json",
          "path": "my-project/.projen--files.json",
        },
        "Dependencies": Object {
          "children": Object {
            ".projen--deps.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--deps.json",
              "path": "my-project/Dependencies/.projen--deps.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Dependencies",
          "path": "my-project/Dependencies",
        },
        "GitHub": Object {
          "children": Object {
            "Mergify": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Mergify",
              "path": "my-project/GitHub/Mergify",
            },
            "PullRequestLint": Object {
              "children": Object {
                "pull-request-lint": Object {
                  "children": Object {
                    ".github--workflows--pull-request-lint.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--pull-request-lint.yml",
                      "path": "my-project/GitHub/PullRequestLint/pull-request-lint/.github--workflows--pull-request-lint.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "pull-request-lint",
                  "path": "my-project/GitHub/PullRequestLint/pull-request-lint",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "PullRequestLint",
              "path": "my-project/GitHub/PullRequestLint",
            },
            "Stale": Object {
              "children": Object {
                "stale": Object {
                  "children": Object {
                    ".github--workflows--stale.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--stale.yml",
                      "path": "my-project/GitHub/Stale/stale/.github--workflows--stale.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "stale",
                  "path": "my-project/GitHub/Stale/stale",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Stale",
              "path": "my-project/GitHub/Stale",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "GitHub",
          "path": "my-project/GitHub",
        },
        "Logger": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Logger",
          "path": "my-project/Logger",
        },
        "Pom": Object {
          "children": Object {
            "pom.xml": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "pom.xml",
              "path": "my-project/Pom/pom.xml",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Pom",
          "path": "my-project/Pom",
        },
        "ProjectBuild": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "ProjectBuild",
          "path": "my-project/ProjectBuild",
        },
        "Projenrc": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Projenrc",
          "path": "my-project/Projenrc",
        },
        "README.md": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "README.md",
          "path": "my-project/README.md",
        },
        "Tasks": Object {
          "children": Object {
            ".projen--tasks.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--tasks.json",
              "path": "my-project/Tasks/.projen--tasks.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Tasks",
          "path": "my-project/Tasks",
        },
        "VsCode": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "VsCode",
          "path": "my-project/VsCode",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.78",
      },
      "id": "my-project",
      "path": "my-project",
    },
    "version": "tree-0.1",
  },
  "README.md": "# replace this",
  "pom.xml": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<project xsi:schemaLocation=\\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\\" xmlns=\\"http://maven.apache.org/POM/4.0.0\\" xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\">
    <modelVersion>4.0.0</modelVersion>
    <groupId>my.group.id</groupId>
    <artifactId>hello-world</artifactId>
    <version>1.2.3</version>
    <packaging>jar</packaging>
    <name>my-project</name>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>io.github.cdklabs</groupId>
            <artifactId>projen</artifactId>
            <version>1.0.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
<!-- ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\". -->",
}
`;

exports[`set the class name 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes linguist-generated
/.github/workflows/pull-request-lint.yml linguist-generated
/.github/workflows/stale.yml linguist-generated
/.gitignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/pom.xml linguist-generated",
  ".github/workflows/pull-request-lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    steps:
      - uses: amannn/action-semantic-pull-request@v3.4.6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v4
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-pr-message: Closing this pull request as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-pr-label: stale
          exempt-pr-labels: backlog
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-issue-message: Closing this issue as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-issue-label: stale
          exempt-issue-labels: backlog
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/.github/workflows/stale.yml
!/pom.xml
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "org.codehaus.mojo/exec-maven-plugin",
        "type": "build",
        "version": "3.0.0",
      },
      Object {
        "name": "io.github.cdklabs/projen",
        "type": "test",
        "version": "7.7.7",
      },
    ],
  },
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".github/workflows/pull-request-lint.yml",
      ".github/workflows/stale.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "pom.xml",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
        "steps": Array [
          Object {
            "exec": "mvn compiler:testCompile --quiet",
          },
          Object {
            "exec": "mvn exec:java --quiet -Dexec.mainClass=boom.bam.projenrc -Dexec.classpathScope=\\"test\\"",
          },
        ],
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  ".projen/tree.json": Object {
    "tree": Object {
      "children": Object {
        ".gitattributes": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitattributes",
          "path": "my-project/.gitattributes",
        },
        ".gitignore": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitignore",
          "path": "my-project/.gitignore",
        },
        ".projen--files.json": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".projen--files.json",
          "path": "my-project/.projen--files.json",
        },
        "Dependencies": Object {
          "children": Object {
            ".projen--deps.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--deps.json",
              "path": "my-project/Dependencies/.projen--deps.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Dependencies",
          "path": "my-project/Dependencies",
        },
        "GitHub": Object {
          "children": Object {
            "Mergify": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Mergify",
              "path": "my-project/GitHub/Mergify",
            },
            "PullRequestLint": Object {
              "children": Object {
                "pull-request-lint": Object {
                  "children": Object {
                    ".github--workflows--pull-request-lint.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--pull-request-lint.yml",
                      "path": "my-project/GitHub/PullRequestLint/pull-request-lint/.github--workflows--pull-request-lint.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "pull-request-lint",
                  "path": "my-project/GitHub/PullRequestLint/pull-request-lint",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "PullRequestLint",
              "path": "my-project/GitHub/PullRequestLint",
            },
            "Stale": Object {
              "children": Object {
                "stale": Object {
                  "children": Object {
                    ".github--workflows--stale.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--stale.yml",
                      "path": "my-project/GitHub/Stale/stale/.github--workflows--stale.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "stale",
                  "path": "my-project/GitHub/Stale/stale",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Stale",
              "path": "my-project/GitHub/Stale",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "GitHub",
          "path": "my-project/GitHub",
        },
        "Logger": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Logger",
          "path": "my-project/Logger",
        },
        "Pom": Object {
          "children": Object {
            "pom.xml": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "pom.xml",
              "path": "my-project/Pom/pom.xml",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Pom",
          "path": "my-project/Pom",
        },
        "ProjectBuild": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "ProjectBuild",
          "path": "my-project/ProjectBuild",
        },
        "Projenrc": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Projenrc",
          "path": "my-project/Projenrc",
        },
        "README.md": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "README.md",
          "path": "my-project/README.md",
        },
        "Tasks": Object {
          "children": Object {
            ".projen--tasks.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--tasks.json",
              "path": "my-project/Tasks/.projen--tasks.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Tasks",
          "path": "my-project/Tasks",
        },
        "VsCode": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "VsCode",
          "path": "my-project/VsCode",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.78",
      },
      "id": "my-project",
      "path": "my-project",
    },
    "version": "tree-0.1",
  },
  "README.md": "# replace this",
  "pom.xml": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<project xsi:schemaLocation=\\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\\" xmlns=\\"http://maven.apache.org/POM/4.0.0\\" xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\">
    <modelVersion>4.0.0</modelVersion>
    <groupId>my.group.id</groupId>
    <artifactId>hello-world</artifactId>
    <version>1.2.3</version>
    <packaging>jar</packaging>
    <name>my-project</name>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>io.github.cdklabs</groupId>
            <artifactId>projen</artifactId>
            <version>7.7.7</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
<!-- ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\". -->",
}
`;

exports[`use a non-test scope 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes linguist-generated
/.github/workflows/pull-request-lint.yml linguist-generated
/.github/workflows/stale.yml linguist-generated
/.gitignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/pom.xml linguist-generated",
  ".github/workflows/pull-request-lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    steps:
      - uses: amannn/action-semantic-pull-request@v3.4.6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v4
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-pr-message: Closing this pull request as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-pr-label: stale
          exempt-pr-labels: backlog
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-issue-message: Closing this issue as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-issue-label: stale
          exempt-issue-labels: backlog
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/.github/workflows/stale.yml
!/pom.xml
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "org.codehaus.mojo/exec-maven-plugin",
        "type": "build",
        "version": "3.0.0",
      },
      Object {
        "name": "io.github.cdklabs/projen",
        "type": "runtime",
        "version": "7.7.7",
      },
    ],
  },
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".github/workflows/pull-request-lint.yml",
      ".github/workflows/stale.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "pom.xml",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
        "steps": Array [
          Object {
            "exec": "mvn compiler:compile --quiet",
          },
          Object {
            "exec": "mvn exec:java --quiet -Dexec.mainClass=projenrc",
          },
        ],
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  ".projen/tree.json": Object {
    "tree": Object {
      "children": Object {
        ".gitattributes": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitattributes",
          "path": "my-project/.gitattributes",
        },
        ".gitignore": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitignore",
          "path": "my-project/.gitignore",
        },
        ".projen--files.json": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".projen--files.json",
          "path": "my-project/.projen--files.json",
        },
        "Dependencies": Object {
          "children": Object {
            ".projen--deps.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--deps.json",
              "path": "my-project/Dependencies/.projen--deps.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Dependencies",
          "path": "my-project/Dependencies",
        },
        "GitHub": Object {
          "children": Object {
            "Mergify": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Mergify",
              "path": "my-project/GitHub/Mergify",
            },
            "PullRequestLint": Object {
              "children": Object {
                "pull-request-lint": Object {
                  "children": Object {
                    ".github--workflows--pull-request-lint.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--pull-request-lint.yml",
                      "path": "my-project/GitHub/PullRequestLint/pull-request-lint/.github--workflows--pull-request-lint.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "pull-request-lint",
                  "path": "my-project/GitHub/PullRequestLint/pull-request-lint",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "PullRequestLint",
              "path": "my-project/GitHub/PullRequestLint",
            },
            "Stale": Object {
              "children": Object {
                "stale": Object {
                  "children": Object {
                    ".github--workflows--stale.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--stale.yml",
                      "path": "my-project/GitHub/Stale/stale/.github--workflows--stale.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "stale",
                  "path": "my-project/GitHub/Stale/stale",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Stale",
              "path": "my-project/GitHub/Stale",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "GitHub",
          "path": "my-project/GitHub",
        },
        "Logger": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Logger",
          "path": "my-project/Logger",
        },
        "Pom": Object {
          "children": Object {
            "pom.xml": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "pom.xml",
              "path": "my-project/Pom/pom.xml",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Pom",
          "path": "my-project/Pom",
        },
        "ProjectBuild": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "ProjectBuild",
          "path": "my-project/ProjectBuild",
        },
        "Projenrc": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Projenrc",
          "path": "my-project/Projenrc",
        },
        "README.md": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "README.md",
          "path": "my-project/README.md",
        },
        "Tasks": Object {
          "children": Object {
            ".projen--tasks.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--tasks.json",
              "path": "my-project/Tasks/.projen--tasks.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Tasks",
          "path": "my-project/Tasks",
        },
        "VsCode": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "VsCode",
          "path": "my-project/VsCode",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.78",
      },
      "id": "my-project",
      "path": "my-project",
    },
    "version": "tree-0.1",
  },
  "README.md": "# replace this",
  "pom.xml": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<project xsi:schemaLocation=\\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\\" xmlns=\\"http://maven.apache.org/POM/4.0.0\\" xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\">
    <modelVersion>4.0.0</modelVersion>
    <groupId>my.group.id</groupId>
    <artifactId>hello-world</artifactId>
    <version>1.2.3</version>
    <packaging>jar</packaging>
    <name>my-project</name>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>io.github.cdklabs</groupId>
            <artifactId>projen</artifactId>
            <version>7.7.7</version>
        </dependency>
    </dependencies>
</project>
<!-- ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\". -->",
}
`;
